projects.css
* {
  box-sizing: border-box;
}

.project-header {
  font-family: "Lato", Sans-serif;
  text-align: center;
  padding-top: 20px;
  font-weight: 900;
  margin-left: 10%;
  width: 80%;
}
.roblox-pics {
  background-color:#000;
  background-image: url("images/roblox/1.png");
  background-size: cover;
  background-position: 40%;
  position: relative;
  width: 80%;
  margin-top: 20px;
  margin-left: 10%;
  height: 200px;
  transition: all 0.2s ease-in-out;
}
.pic-caption {
  position: absolute;
  bottom: 20px;
  right: 20px;
  background-color: black;
  color: white;
  padding: 2%;
  font-family: "Lato", Sans-serif;
}
.roblox-pics1 {
  background-color:#5582f6;
  width: 100%;
  height: 300px;
}

.stats {
  width: 80%;
  margin-top: 50px;
  margin-left: 10%;
  height: 100px;
}
.stats-box {
  font-family: "Lato", Sans-serif;
  font-size: 1.5vh;
  text-align: center;
  width: 33.33%;
  float: left;
  height: 100%;
  font-style: italic;
}

.text {
  margin-left: 10%;
  width: 80%;
  margin-bottom: 20px;
}

.title {
  color: white;
  font-family: "Lato", Sans-serif;
}
.text-desc {
  color: white;
  font-family: "Lato", Sans-serif;
  max-width: 90%;
  line-height: 1.6;
}

a {
  color: #5582f6;
  text-decoration: none;
}

.text-item {
  border-bottom: 1px solid #ddd;
  padding: 20px 0;
}

.item-header{
  padding: 14px 6px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  cursor: pointer;
}
.icon{
  width: 28px;
  height: 28px;
  border: 2px solid #000;
  border-radius: 50%;
  text-align: center;
  font-size: 30px;
  font-weight: 700;
  line-height: 25px;
}
.text-desc {
  color: #bbb;
  padding: 0 6px;
  max-height: 0px;
  overflow: hidden;
}
.text-desc b {
  color: white;
}

.text-item.active .text-desc {
  max-height: 600px;
  transition: 0.7s linear;
}

#dc-img2 {
  width: 60%;
  height: 60%;
  margin-left: 20%;
}

#interfaces-box img{
  width: 70%;
  height: 70%;
  display: block;
  margin-left: auto;
  margin-right: auto;
}
#interfaces-box {
  font-family: "Lato", Sans-serif;
}

@media screen and (max-width: 600px) {
  .text { margin-top: 30px; }
  .stats-box {font-size: 1.5vh;}
  #dc-img2 {width: 100%; height: 100%; margin-left: 0%;}
}

